<resources>
    <string name="app_name">Attendance</string>
    <string name="open_serial_fail">打开串口失败！</string>
    <string-array name="features">
        <item>北斗</item>
        <item>M1卡</item>
        <item>条码</item>
        <item>NFC</item>
        <item>身份证</item>
        <item>超高频</item>
        <item>指纹</item>
        <item>循环读取</item>
        <item>15693标签</item>
        <item>FBI指纹</item>
        <item>7-Pad CPU卡</item>
        <item>7-Pad Psam卡</item>
        <item>接触式银行卡</item>
        <item>4.3/5-PDA IC卡</item>
        <item>4.3/5-PDA CPU卡</item>
        <item>4.3/5-PDA Psam卡</item>
    </string-array>
    <string-array name="ic_cmd_value">
        <item>请选择IC卡操作指令</item>
        <item>删除文件</item>
        <item>建立 MF</item>
        <item>结束建立MF</item>
        <item>建立 DF</item>
        <item>结束建立 DF</item>
        <item>建立二进制</item>
        <item>选择二进制文件</item>
        <item>读二进制文件</item>
        <item>写二进制文件</item>
        <item>选中PBOC主目录</item>
        <item>获取随机数</item>
    </string-array>
    <string name="feature_settings">功能设置</string>
    <string name="baudrate">波特率：</string>
    <string name="version">版本</string>
    <string name="stop_connect">断开连接</string>
    <string name="fingerprint">指纹</string>
    <string name="loop_read">循环读取</string>
    <string name="barcode">Bar Code</string>
    <string name="rfid">RFID</string>
    <string name="pin">身份证</string>
    <string name="beidou">北斗</string>
    <string name="exit_toast">再按一次退出程序</string>
    <string name="read_sfz">Reader</string>
    <string name="sequential_sfz">Continuous reader</string>
    <string name="stop">Stop</string>
    <string name="clear_sfz">Clear</string>
    <string name="read_card_fail">Did not find a card</string>
    <string name="read_card_success">Successful reader</string>
    <string name="start_control_command">启动控制命令</string>
    <string name="mode_switch_command">模式切换命令</string>
    <string name="statement_frequency_command">语句及其频度控制命令</string>
    <string name="print_finger">请按指纹！</string>
    <string name="print_finger_again">请再次按指纹！</string>
    <string name="processing">指纹采集成功，正在上传处理...</string>
    <string name="generate_char_fail">生成特征值失败！</string>
    <string name="reg_model_success">合成模板成功！</string>
    <string name="reg_model_fail">合成模板失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！</string>
    <string name="verifying_wait">正在验证，请稍后...</string>
    <string name="down_char_fail">验证失败</string>
    <string name="verifying_through">验证通过</string>
    <string name="verifying_fail">验证失败</string>
    <string name="up_image_success">上传指纹图像成功</string>
    <string name="up_image_fail">上传指纹图像失败</string>
    <string name="clear_model">清除模板</string>
    <string name="id_model">ID:</string>
    <string name="clear_model_success">清除模板成功</string>
    <string name="clear_model_fail">清除模板失败</string>
    <string name="enter_id">请输入ID</string>
    <string name="register3">注册</string>
    <string name="down_store">下载存储</string>
    <string name="validate3">验证</string>
    <string name="down_store_success">下载存储成功</string>
    <string name="down_store_fail">下载存储失败</string>
    <string name="search_success">搜索成功</string>
    <string name="search_fail">搜索失败</string>
    <string name="down_store_null">模板不能为空</string>
    <string-array name="fingerprint_size">
        <item>小指纹</item>
        <item>大指纹</item>
    </string-array>
    <string name="card_number">卡号</string>
    <string name="read_card">读卡</string>
    <string name="write_card">写卡</string>
    <string name="write_password">密码：</string>
    <string name="update_password">修改密码</string>
    <string name="write_block_num">写入块号：</string>
    <string name="write_data">写入数据：</string>
    <string name="read_block_num">读入块号：</string>
    <string name="read_data">读入数据：</string>
    <string name="getcard_wait">正在获取卡号，请稍后...</string>
    <string name="updatepwding_wait">正在修改密码，请稍后...</string>
    <string name="writing_wait">正在写卡，请稍后...</string>
    <string name="reading_wait">正在读卡，请稍后...</string>
    <string name="writing_success">写卡成功</string>
    <string name="writing_fail">写卡失败</string>
    <string name="reading_success">读卡成功</string>
    <string name="reading_fail">读卡失败</string>
    <string name="card_to_area">请将卡放入读卡区</string>
    <string name="first_card">请先读卡，再验证指纹！</string>
    <string name="back">back</string>
    <string name="register_fingerprint">注册指纹</string>
    <string name="validate_fingerprint">验证指纹</string>
    <string name="save_model">保存模板</string>
    <string name="compares">比较</string>
    <string name="match">匹配</string>
    <string name="clear_flash">清空指纹库</string>
    <string name="calibration">校准</string>
    <string name="import_finger">导入</string>
    <string name="calibration_success">校准成功</string>
    <string name="calibration_fail">校准失败</string>
    <string name="clear_flash_success">清空指纹库成功</string>
    <string name="clear_flash_fail">清空指纹库失败</string>
    <string name="first_register">请先注册指纹！</string>
    <string name="no_card_with_data">未寻到卡,有返回数据</string>
    <string name="no_card_without_data">未寻到卡,无返回数据，超时！！</string>
    <string name="find_card_exception">可能是串口打开失败或其他异常</string>
    <string name="write_data_toast">写入数据和块号不能为空</string>
    <string name="write_toast">写入时 块号、数据不能为空</string>
    <string name="read_toast">读入 时块号不能为空</string>
    <string name="bluetooth_no_connect">蓝牙未连接!</string>
    <string name="open_success">open bar code success</string>
    <string name="open_fail">open bar code fail</string>
    <string name="close_success">close bar code success</string>
    <string name="close_fail">close bar code fail</string>
    <string name="scan">scan</string>
    <string name="scan_parameter">Scan Configuration Parameter</string>
    <string name="close_scan">close</string>
    <string name="setting">设置</string>
    <string name="singleScan">单次扫描</string>
    <string name="not_init">Not initialized!</string>
    <string name="not_open">Not open!</string>
    <string name="open_sanner">Is opening the scanner</string>
    <string name="setHost">setHost</string>
    <string name="packetformat">packetformat</string>
    <string name="startdecode">startdecode</string>
    <string name="ack">ACK</string>
    <string name="noID">请输入ID</string>
    <string name="nak">NAK</string>
    <string name="prepare_dialog">正在准备，请稍候...</string>
    <string name="decode_fail">解码失败</string>
    <string name="enable">enable</string>
    <string name="disable">disable</string>
    <string name="restore">Set Factory Defaults</string>
    <string name="set_host">Set Host</string>
    <string name="disable_all_symbologies">Disable All Symbologies</string>
    <string name="one_d_symbologies">1D Symbologies</string>
    <string name="upc_a_text">UPC-A</string>
    <string name="upc_e_text">UPC-E</string>
    <string name="upc_e1_text">UPC-E1</string>
    <string name="ean_8_jan_8_text">EAN-8/JAN-8</string>
    <string name="ean_13_jan_13_text">EAN-13/JAN-13</string>
    <string name="bookland_ean_text">Bookland EAN</string>
    <string name="bookland_isbn_format_text">Bookland ISBN Format</string>
    <string name="enable_isbn_10">Bookland ISBN-10</string>
    <string name="enable_isbn_13">Bookland ISBN-13</string>
    <string name="ucc_coupon_extended_code_text">UCC COUPON EXTENDED CODE</string>
    <string name="issn_ean_text">ISSN EAN</string>
    <string name="code_128_text">Code 128</string>
    <string name="gs1_128_text">GS1-128 (formerly UCC/EAN-128)</string>
    <string name="isbt_128_text">ISBT 128</string>
    <string name="code_39_text">Code 39</string>
    <string name="trioptic_code_39_text">Trioptic Code 39</string>
    <string name="code_93_text">Code 93</string>
    <string name="code_11_text">Code 11</string>
    <string name="itf_text">Interleaved 2 of 5</string>
    <string name="dtf_text">Discrete 2 of 5</string>
    <string name="codabar_text">Codabar</string>
    <string name="msi_text">MSI</string>
    <string name="ctf_text">Chinese 2 of 5</string>
    <string name="mtf_text">Matrix 2 of 5</string>
    <string name="ktf_text">Korean 3 of 5</string>
    <string name="inverse_1d_text">Inverse 1D</string>
    <string name="regular">Regular</string>
    <string name="inverse_only">Inverse Only</string>
    <string name="inverse_autodetect">Inverse Autodetect</string>
    <string name="two_d_symbologies">2D Symbologies</string>
    <string name="pdf417_text">PDF417</string>
    <string name="micro_pdf417_text">MicroPDF417</string>
    <string name="code_128_emulation_text">Code 128 Emulation</string>
    <string name="data_matrix">Data Matrix</string>
    <string name="data_matrix_inverse_text">Data Matrix Inverse</string>
    <string name="decode_mirror_images_text">Decode Mirror Images (Data Matrix Only)</string>
    <string name="never">Never</string>
    <string name="always">Always</string>
    <string name="auto">Auto</string>
    <string name="maxicode_text">Maxicode</string>
    <string name="qr_code_text">QR Code</string>
    <string name="qr_inverse_text">QR Inverse</string>
    <string name="micro_qr_text">MicroQR</string>
    <string name="aztec_text">Aztec</string>
    <string name="read_15693">读卡</string>
    <string name="stopread">停止读卡</string>
    <string name="back_15693">返回</string>
    <string name="scanner_status">扫描仪当前状态：</string>
    <string name="clear_scanner_time">清空</string>
    <string name="scanner_total">总共：</string>
    <string name="success_time">成功：</string>
    <string name="open_scan">单描</string>
    <string name="start_scan">开始连扫</string>
    <string name="end_scan">关闭连扫</string>
    <string name="scan_settings">设置</string>
    <string name="output_mode">输出模式为第几种：</string>
    <string name="terminal_char">终结字符为第几种：</string>
    <string name="prefix">前缀：</string>
    <string name="suffix">后缀：</string>
    <string name="volume">音量：</string>
    <string-array name="playone_mode">
        <item>只有声音</item>
        <item>只有震动</item>
        <item>声音及震动</item>
        <item>无</item>
    </string-array>
    <string name="ic_ll_show_data">显示数据</string>
    <string name="ic_ll_default_hex">默认填写十六进制数据</string>
    <string name="ic_ll_clear">清除</string>
    <string name="ic_ll_send">发送</string>
    <string name="ic_ll_clear_show">清除显示</string>
    <string name="ic_ll_clear_count">清除统计</string>
    <string name="ic_ll_switch_cmd">切换指令</string>
    <string name="ic_ll_get_random">获取随机数</string>
    <string name="ic_ll_cycle_get">循环获取</string>
    <string name="ic_ll_cycle_close">关闭循环</string>
    <string name="ic_ll_tips">测试时，首先执行切换指令，返回成功后等待20s左右的时间插入IC卡，看是否有检测到IC卡，最后执行获取随机数\r\n执行建立MF或DF时必须手动执行对应的结束命令</string>
    <string name="left_thumb">Left Thumb</string>
    <string name="left_index">Left Index</string>
    <string name="left_middle">Left Middle</string>
    <string name="left_ring">Left Ring</string>
    <string name="left_little">Left Little</string>
    <string name="right_thumb">Right Thumb</string>
    <string name="right_index">Right Index</string>
    <string name="right_middle">Right Middle</string>
    <string name="right_ring">Right Ring</string>
    <string name="right_little">Right Little</string>
    <string name="delete_all">Delete All</string>
    <string name="identify">Identify</string>
    <string name="grab">Grab Image</string>
    <string name="navigate_raw">raw mode</string>
    <string name="navigate_mouse">mouse mode</string>
    <string name="navigate_discrete">discrete mode</string>
    <string name="quit">Quit</string>
    <string name="fbi_regist">Regist</string>
    <string name="fbi_save">Save</string>
    <string name="fbi_verify">Verify</string>
    <string name="fbi_clear">Clear</string>
    <string name="pad7_psam_reset">复位</string>
    <string name="pad7_psam_get_random_number">获取随机数</string>
    <string name="pad7_psam_cmd_hint">请输入16进制指令</string>
    <string name="pad7_psam_send">发送</string>
    <string name="pad7_psam_receiver_data">收到的数据：</string>
</resources>