<?xml version="1.0" encoding="utf-8"?>
 <ScrollView 
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" 
	android:focusable="true"
	android:focusableInTouchMode="true" >
	<EditText
	    android:id="@+id/show_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textColor="@color/green"
        android:scrollbars="vertical"
        android:longClickable="false"
        android:clickable="false"
        android:maxLines="1000"
		android:singleLine="false"
		android:hint="@string/ic_ll_show_data"
		android:background="@null"
		android:inputType="textMultiLine"
		android:gravity="right|bottom"
		android:focusable="false"/>
	
	<Spinner
            android:id="@+id/spinner"
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
	<RelativeLayout 
	    android:id="@+id/llayout2"
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:layout_height="wrap_content">
		<EditText
		    android:layout_toLeftOf="@+id/llayout3"
		    android:id="@+id/send_content"
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:layout_marginTop="10dp"
			android:textColor="@color/black"
			android:scrollbars="vertical"
			android:maxLines="1000"
			android:singleLine="false"
			android:background="@color/white"
			android:hint="@string/ic_ll_default_hex"
			android:inputType="textMultiLine"
			android:gravity="right|bottom"/>
		<LinearLayout 
		    android:id="@+id/llayout3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginTop="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_alignParentRight="true">
			<Button
			    android:id="@+id/clear_btn"
			    android:layout_width="wrap_content"
			    android:layout_height="40dp"
			    android:text="@string/ic_ll_clear"/>
			<Button
			    android:id="@+id/send_btn"
			    android:layout_width="wrap_content"
			    android:layout_height="40dp"
			    android:text="@string/ic_ll_send"/>
		</LinearLayout>
	</RelativeLayout>
	<LinearLayout
	    android:layout_marginTop="10dp"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button 
		    android:id="@+id/btn_clean"
		    android:text="@string/ic_ll_clear_show"
		    android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
		<Button 
		    android:id="@+id/btn_cleanCount"
		    android:text="@string/ic_ll_clear_count"
		    android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
		<Button 
		    android:id="@+id/btn_switch"
		    android:text="@string/ic_ll_switch_cmd"
		    android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_marginTop="10dp"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button 
		    android:id="@+id/btn_GetRandom"
		    android:text="@string/ic_ll_get_random"
		    android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
		<Button 
		    android:id="@+id/btn_CycleGetRandom"
		    android:text="@string/ic_ll_cycle_get"
		    android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
		<Button 
		    android:id="@+id/btn_CloseCycle"
		    android:text="@string/ic_ll_cycle_close"
		    android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	<TextView
	    android:id="@+id/show_count"
	    android:layout_marginTop="10dp"
	    android:layout_width="wrap_content"
	    android:text=""
	    android:textColor="@color/green"
	    android:layout_height="wrap_content"/>
	<TextView 
	    android:layout_marginTop="10dp"
	    android:layout_width="wrap_content"
	    android:text="@string/ic_ll_tips"
	    android:textColor="@color/red"
	    android:layout_height="wrap_content"/>
</LinearLayout>
</ScrollView>